--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" --names \"server,client\" --prefix-colors \"yellow,cyan\"",
     "dev:client": "react-router dev",
     "dev:server": "SERVER_PORT=3001 tsx watch server/index.ts",
-    "typecheck": "react-router typegen && tsc"
+    "lint": "eslint .",
+    "typecheck": "react-router typegen && tsc",
+    "prepare": "husky"
   },
   "dependencies": {
     "@react-router/express": "^7.9.6",
@@ -29,9 +31,14 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "concurrently": "^9.2.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "husky": "^9.1.7",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2",
+    "typescript-eslint": "^8.46.4",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4"
   }
