fix: user login vars

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 SERVER_PORT=3001
-USERNAME=user
-PASSWORD=pass
+AUTH_USERNAME=user
+AUTH_PASSWORD=pass
+
+# Disable SSL certificate verification ONLY in development
+NODE_TLS_REJECT_UNAUTHORIZED=0
