--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "basic-auth": "^2.0.1",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "isbot": "^5.1.31",
     "react": "^19.1.1",
