feat: Add recommendations route

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@ SERVER_PORT=3001
 AUTH_USERNAME=user
 AUTH_PASSWORD=pass
 
+SERVICE1_TOKEN=
+
 # Disable SSL certificate verification ONLY in development
 NODE_TLS_REJECT_UNAUTHORIZED=0
