fix: Remove auth

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
 SERVER_PORT=3001
+CORS_ORIGIN=http://localhost:5173
+
+VITE_BACKEND_SERVICE_URL=http://localhost:3001
+
 AUTH_USERNAME=user
 AUTH_PASSWORD=pass
 
 SERVICE1_TOKEN=
 
-# Disable SSL certificate verification ONLY in development
+# Disable SSL certificate verification in development
+# WARNING: Only use in development, never in production
 NODE_TLS_REJECT_UNAUTHORIZED=0
