--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-router/express": "^7.9.6",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
-    "basic-auth": "^2.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "isbot": "^5.1.31",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@react-router/dev": "^7.9.2",
     "@tailwindcss/vite": "^4.1.13",
-    "@types/basic-auth": "^1.1.8",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^22",
     "@types/react": "^19.1.13",
