--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
-SERVER_PORT=3001
-CORS_ORIGIN=http://localhost:5173
-
+VITE_AUTH_USERNAME=user
+VITE_AUTH_PASSWORD=pass
 VITE_BACKEND_SERVICE_URL=http://localhost:3001
 
-AUTH_USERNAME=user
-AUTH_PASSWORD=pass
+SERVER_PORT=3001
+CORS_ORIGIN=http://localhost:5173
 
 SERVICE1_TOKEN=
 
