chore: refactor server part

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,9 @@ VITE_BACKEND_SERVICE_URL=http://localhost:3001
 SERVER_PORT=3001
 CORS_ORIGIN=http://localhost:5173
 
+SERVICE1_URL=https://a2da22tugdqsame4ckd3oohkmu0tnbne.lambda-url.eu-central-1.on.aws/services/service1
 SERVICE1_TOKEN=
+SERVICE2_URL=https://a2da22tugdqsame4ckd3oohkmu0tnbne.lambda-url.eu-central-1.on.aws/services/service2
 
 # Disable SSL certificate verification in development
 # WARNING: Only use in development, never in production
