--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dev:server": "tsx watch server/index.ts",
     "lint": "eslint .",
     "typecheck": "react-router typegen && tsc",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "prepare": "husky"
   },
   "dependencies": {
@@ -37,6 +39,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "husky": "^9.1.7",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2",
