--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "type": "module",
   "version": "1.0.0",
   "scripts": {
-    "build": "react-router build",
-    "build:server": "tsc --project tsconfig.server.json && cp server/package.json build/server/",
-    "start": "node index.js",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" --names \"server,client\" --prefix-colors \"yellow,cyan\"",
     "dev:client": "react-router dev",
     "dev:server": "tsx watch server/index.ts",
+    "build:client": "react-router build",
+    "build:server": "tsc --project server/tsconfig.json",
     "lint": "eslint .",
     "typecheck": "react-router typegen && tsc",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+    "postinstall": "cd server && npm install && cd ..",
     "prepare": "husky"
   },
   "dependencies": {
@@ -21,9 +21,6 @@
     "@react-router/node": "^7.9.6",
     "@react-router/serve": "^7.9.6",
     "axios": "^1.13.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
     "isbot": "^5.1.32",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -32,9 +29,6 @@
   "devDependencies": {
     "@react-router/dev": "^7.9.2",
     "@tailwindcss/vite": "^4.1.13",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.5",
-    "@types/node": "^22",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "concurrently": "^9.2.1",
